<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.example.vinove.sqlitedb2.MainActivity">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:alpha="0"
        android:background="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"

        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/nomal_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/your_account"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="47dp"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:hint="@string/enter_user_email"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtemail"
        android:layout_alignLeft="@+id/txtemail"
        android:layout_alignRight="@+id/txtemail"
        android:layout_alignStart="@+id/txtemail"
        android:layout_below="@+id/txtemail"
        android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_user_passwrod"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtpass"
        android:layout_alignLeft="@+id/txtpass"
        android:layout_alignRight="@+id/txtpass"
        android:layout_alignStart="@+id/txtpass"
        android:layout_below="@+id/txtpass"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnsignin"
        android:layout_alignLeft="@+id/btnsignin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnsignin"
        android:layout_alignStart="@+id/btnsignin"
        android:layout_marginBottom="41dp"
        android:alpha="0.6"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/btnreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/are_you_new_sign_up_now"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

</RelativeLayout>