<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:alpha="0.4"
        android:background="#000000" />

    <TextView
        android:id="@+id/txt_success_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="258dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_parag_gupta"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_success_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_success_name"
        android:gravity="center_horizontal"
        android:text="@string/parag_gupta_mail_vinove_com"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <com.pkmmte.view.CircularImageView
        android:id="@+id/imgclick"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/txt_success_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:src="@drawable/login_bg"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="2dp"
        app:shadow="true" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_success_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txt_success_name"
        android:layout_below="@+id/txt_success_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/log_out"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_success_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:gravity="center_horizontal"
        android:text="@string/click_the_image_to_upload_your_profile_picture"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textSize="14sp" />
</RelativeLayout>